# aiclass

./: .gitignore  LICENSE  README.md  pyproject.toml
aiclass/: pyproject.toml  requirements.txt  基隆車站每日進出站人數.xlsx
aiclass/lesson10/assets/: students.csv  學生.csv
aiclass/lesson11/: lesson11.ipynb
aiclass/lesson12/: aqi_data_20251120_124932.csv
aiclass/lesson14/: lesson14_2.ipynb
aiclass/lesson17/: lesson17.ipynb
aiclass/lesson18/: lesson18.ipynb  lesson18_2.ipynb
aiclass/lesson19/: lesson19.ipynb  lesson19_2.ipynb  main.py  基隆車站每日進出站人數.xlsx
aiclass/lesson20/: lesson20.ipynb
aiclass/lesson21/: .gitignore  first.py  lesson21.ipynb  requirement.txt
aiclass/lesson3/: lesson3_1.ipynb
aiclass/lesson6/: lesson6_1.ipynb
aiclass/lesson8/assets/: student.csv  學生.csv
aiclass/lesson9/assets/: students.csv
lesson10/: lesson10.py  lesson10_1.ipynb
lesson10/assets/: students.csv
lesson12/: aqi_data_20251120_124932.csv  lesson12.ipynb
lesson13/: lesson13.ipynb  lesson13_2.ipynb
lesson14/: lesson14.ipynb
lesson15/: lesson15.ipynb  lesson15_1.ipynb
lesson16/: lesson16.ipynb  各鄉鎮市區人口密度_清理後.xlsx
lesson17/: lesson17.ipynb
lesson2/: lesson2_2.ipynb
lesson3/: losson3_1.ipynb
lesson4/: lesson4_1.ipynb
lesson5/: lesson5_1.ipynb
lesson7/: lesson7_1.ipynb
lesson8/: lesson8_1.ipynb
lesson8/assets/: student.csv  學生.csv
lesson9/: lesson9.py  lesson9_1.ipynb  tools.py
lesson9/assets/: students.csv  學生.csv
